# meson-python-pdm-example

./: .gitignore  README.md  meson.build  meson.options  pyproject.toml
.github/workflows/: build.yml
meson_python_pdm_example/: __init__.py  extension.c  meson.build
tests/: meson.build  test_example.py
