[project]
name = "meson-python-pdm-example"
description = "Default template for PDM package"
authors = [
    {name = "Arjan Molenaar", email = "gaphor@gmail.com"},
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = {text = "Apache-2.0"}
dynamic = ["version"]
dependencies = []

[tool.pdm.dev-dependencies]
test = [
    "pytest",
]

[build-system]
build-backend = "mesonpy"
requires = ["meson-python>=0.12.1"]
