# SPDX-FileCopyrightText: 2024 Arjan Molenaar
# SPDX-License-Identifier: Apache-2.0
[project]
name = "meson-python-pdm-example"
description = "Default template for PDM package"
authors = [
    {name = "Arjan Molenaar", email = "gaphor@gmail.com"},
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = {text = "Apache-2.0"}
dynamic = ["version"]
dependencies = []

[tool.pdm.dev-dependencies]
build = [
    "setuptools",
    "meson-python>=0.16.0",
    "ninja>=1.8.2"
]
test = [
    "pytest",
]

[tool.pdm.options]
install = ["--no-isolation"]

[build-system]
build-backend = "mesonpy"
requires = ["meson-python>=0.16.0"]
